--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-    <div class="modal hidden"></div>
 
-    <div class="modal-info hidden">
+    <nav class="navbar">
 
-    </div>
+    </nav>
 
     <div class="ul-wrapper">
 
@@ -24,7 +23,14 @@
 
         <ul class="saved">
 
+            <h1 class="placeholder">No any bookmarked movies!</h1>
+
         </ul>
+    </div>
+
+
+    <div class="modal hidden">
+        <div class="modal-info hidden"></div>
     </div>
 
     <script src="./js/films.js"></script>
